--- a/src/main/webapp/seller/layout/pageTemplate.xhtml
+++ b/src/main/webapp/seller/layout/pageTemplate.xhtml
@@ -56,7 +56,7 @@
 
 
             <span class="site-footer-mark">
-                <b:iconAwesome name="cutlery" size="lg"/>
+                <b:iconAwesome name="home" size="lg"/>
             </span>
 
             <ul class="site-footer-links">
