valid sale house 1

--- a/src/main/resources/META-INF/resources/github/theme.css
+++ b/src/main/resources/META-INF/resources/github/theme.css
@@ -1033,3 +1033,7 @@ table.floatThead-table {
     border-top-left-radius: 3px;
     border-bottom-left-radius: 3px;
 }
+
+.btn-group>.btn.multiselect{
+    float: none;
+}
