valid sale house 1

--- a/src/main/resources/META-INF/resources/github/theme.css
+++ b/src/main/resources/META-INF/resources/github/theme.css
@@ -824,6 +824,10 @@ table.floatThead-table {
     width: 25%;
 }
 
+.steps.steps-5 li{
+    width: 20%;
+}
+
 .steps li {
     display: table-cell;
     width: 33.3%;
