--- a/src/main/resources/META-INF/resources/bootstrap-select/css/bootstrap-select-plug.css
+++ b/src/main/resources/META-INF/resources/bootstrap-select/css/bootstrap-select-plug.css
@@ -149,3 +149,7 @@ background-color: inherit;
 .bootstrap-select.sm-select .btn.dropdown-toggle{
     padding: 2px 10px;
 }
+
+.input-group-btn .bootstrap-select>select{
+    z-index: -1 !important;
+}
