valid sale house 1

--- a/src/main/webapp/seller/layout/pageTemplate.xhtml
+++ b/src/main/webapp/seller/layout/pageTemplate.xhtml
@@ -43,7 +43,7 @@
 
             <b:navbarLinks>
 
-                <b:navLink value="交易挂牌" href="#{request.contextPath}/erp/hr/employeeList.xhtml"></b:navLink>
+                <b:navLink value="交易挂牌" href="#{request.contextPath}/seller/apply/houseValid.xhtml"></b:navLink>
                 <b:navLink value="租赁挂牌"  styleClass="todo-disable" href="#"></b:navLink>
 
             </b:navbarLinks>
